--- a/manifest.json
+++ b/manifest.json
@@ -1,30 +1,32 @@
 {
-    "name": "NO more doom scrolling",
-    "version": "0.1.0",
-    "description": "Initiative to overcome DOOMSCROLLING",
-    "permissions": ["tabs", "scripting", "activeTab"],
-    "host_permissions": ["https://*.youtube.com/*"],
-    "background": {
-      "service_worker": "background.js"
+  "name": "NO more doom scrolling",
+  "version": "0.1.0",
+  "description": "Initiative to overcome DOOMSCROLLING",
+  "permissions": ["tabs", "scripting", "activeTab", "storage"],
+  "host_permissions": ["https://*.youtube.com/*"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://*.youtube.com/*"],
+      "js": ["contentScript.js"]
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["assets/replace.gif", "assets/replace.jpg"],
+      "matches": ["https://*.youtube.com/*"]
+    }
+  ],
+  "action": {
+    "default_icon": {
+      "16": "assets/icon16.png",
+      "48": "assets/icon48.png",
+      "128": "assets/icon128.png"
     },
-    "content_scripts": [
-      {
-        "matches": ["https://*.youtube.com/*"],
-        "js": ["contentScript.js"]
-      }
-    ],
-    "web_accessible_resources": [
-      {
-        "resources": ["assets/replace.gif","assets/replace.jpg"],
-        "matches": ["https://*.youtube.com/*"]
-      }
-    ],
-    "action": {
-      "default_icon": {
-
-      },
-      "default_title": "U R all set WARRIOR"
-
-    },
-    "manifest_version": 3
+    "default_popup": "popup.html",
+    "default_title": "U R all set WARRIOR"
+  },
+  "manifest_version": 3
 }
