--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,11 @@
   "background": {
     "service_worker": "background.js"
   },
+  "icons": {
+    "16": "assets/icon16.png",
+    "48": "assets/icon48.png",
+    "128": "assets/icon128.png"
+  },
   "content_scripts": [
     {
       "matches": ["https://*.youtube.com/*"],
